--- a/style.css
+++ b/style.css
@@ -2313,7 +2313,6 @@
         .view {
           transform: translateZ(0);
           backface-visibility: hidden;
-          -webkit-backface-visibility: hidden;
         }
 
 
